--- a/src/pages/p.module.css
+++ b/src/pages/p.module.css
@@ -1,3 +1,10 @@
+/* Home */
 .Home{
     padding: 1rem;
+}
+
+.mainText{
+    font-size: clamp(1.25rem, 4vw, 2.5rem);
+    font-weight: 500;
+    text-wrap: stable;
 }
