--- a/src/components/c.module.css
+++ b/src/components/c.module.css
@@ -38,6 +38,10 @@
   border-radius: 10px;
 }
 
+.Thumbnail:hover .ThumbnailTitle {
+  text-decoration: underline;
+}
+
 
 /* Main Article page */
 .Article{
