--- a/src/pages/p.module.css
+++ b/src/pages/p.module.css
@@ -1,6 +1,10 @@
 /* Home */
 .Home{
     padding: 1rem;
+    padding-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
 }
 
 .mainText{
